# flock-routing

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-17-smart-complexity-scorer.md
docs/superpowers/specs/: 2026-03-17-smart-complexity-scorer-design.md
src/privacy_serving/: clients.py  complexity.py  config.py  main.py  models.py  router.py  stats.py
src/privacy_serving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/privacy_serving/complexity/: __init__.py  linguistic.py  perplexity.py
tests/: conftest.py  test_api.py  test_clients.py  test_complexity.py  test_complexity_linguistic.py  test_complexity_perplexity.py  test_config.py  test_models.py  test_router.py  test_stats.py
